# cfr-rs

./: .gitignore  Cargo.toml  README.md  cacheprof.sh  memprof.sh  prof.sh  run_all.sh  rustfmt.toml
blotto/: Cargo.toml
blotto/benches/: benchmark.rs
blotto/src/: lib.rs  main.rs
cfr/: Cargo.toml
cfr/benches/: benchmark.rs
cfr/configs/texas_holdem/headsup/: bb.txt  preflop_bb_call.txt  preflop_sb_bet.txt
cfr/src/: eval.rs  games.rs  lib.rs  main.rs  node.rs
cfr/src/games/: dudo.rs  kuhn.rs  leduc.rs
cfr/src/games/texas_holdem/: abstraction.rs  card.rs  cards.rs  dealer.rs  deck.rs  game.rs  hands.rs  mod.rs  post_flop.rs  rule.rs  states.rs
cfr/src/solvers/: mod.rs
cfr/src/solvers/cfr/: mod.rs  node.rs
cfr/src/solvers/mccfr_external_sampling/: mod.rs  node.rs  trainer.rs
dudo/: Cargo.toml  result_100000.txt
dudo/benches/: benchmark.rs
dudo/src/: lib.rs  main.rs
explot/: Cargo.toml
explot/src/: main.rs
kuhn/: Cargo.toml
kuhn/benches/: benchmark.rs
kuhn/src/: lib.rs  main.rs
logs/dudo/: cfr.csv  mccfr-external-sampling.csv
logs/kuhn/: cfr.csv  mccfr-external-sampling.csv
logs/leduc/: cfr.csv  mccfr-external-sampling.csv
mccfr_external_sampling/: Cargo.toml  README.md
mccfr_external_sampling/src/: lib.rs  main.rs  node.rs  trainer.rs
rps/: Cargo.toml
rps/benches/: benchmark.rs
rps/src/: lib.rs  main.rs
