[package]
name = "cfr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
humantime = "2.1.0"
itertools = "0.10.5"
log = "0.4.17"
more-asserts = "0.3.1"
rand = {version ="0.8.5", features = ["alloc"]}
rand_distr = "0.4.3"
wyhash = "0.5.0"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false
