[package]
name = "dudo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
log = "0.4.17"
more-asserts = "0.3.1"
rand = {version ="0.8.5", features = ["alloc"]}

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false
