[package]
name = "explot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.4"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.151", features = ["derive"] }
csv = "1.1.6"
